# S100

./: .gitignore  README.md
.github/workflows/: deploy.yml
core/: Cargo.toml
core/src/: bus.rs  card.rs  cpu_z80.rs  lib.rs  machine.rs  trace.rs
core/src/cards/: boot_rom.rs  cpu_z80.rs  cuter.rs  dazzler.rs  dcdd.rs  fdc.rs  fdc_fif.rs  fdc_wd1793.rs  joystick.rs  mod.rs  ram.rs  rom.rs  serial.rs  sio_88.rs  sol20_io.rs  vdm.rs
core/src/cpu/: i8080.rs  mod.rs
games/: ASTEROIDS.COM  ASTEROIDSHI.COM  FROGGER.COM  LANDER.COM  MAZECHASE.COM  MISSILE.COM  STARDUST.COM
tools/: build_asteroids.py  build_asteroids_hires.py  build_breakout.py  build_frogger.py  build_lander.py  build_mazechase.py  build_missile.py  build_stardust.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: ASTEROIDS.COM  ASTEROIDSHI.COM  AltairCPM22_TEST.dsk  BREAKOUT.COM  CPM22.dsk  FROGGER.COM  IMSAICPM60_MBASIC.dsk  LANDER.COM  MAZECHASE.COM  MISSILE.COM  STARDUST.COM
web/public/disks/: dazzler_games.dsk  infidelsuspen.dsk  planetstationfall.dsk
web/src/: App.tsx
web/src/components/: BusAnalyzer.tsx  CardConfigModal.tsx  CardLibrary.tsx  ChassisView.tsx  DazzlerDisplay.tsx  DisassemblerView.tsx  DiskFileBrowser.tsx  DiskManager.tsx  MemoryView.tsx  ProgrammedOutputPanel.tsx  RegisterView.tsx  S100CardShape.tsx  SimpleActionModal.tsx  Terminal.tsx  ToggleConfigModal.tsx  TraceViewer.tsx  VdmDisplay.tsx  VirtualJoystick.tsx
web/src/config/: cardTypes.ts
web/src/store/: machineStore.ts
web/src/utils/: cpm.ts  cpmFiles.ts  disasm.ts  diskFormat.ts  (+1 more)
(+6 files in other folders)
